--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
 h1{
     margin-bottom: 1rem;
     text-decoration: underline;
+    font-size: 1.8rem;
 }
 
 div{
@@ -48,8 +49,4 @@ div{
     font-size: 20px;
     font-weight:500;
     margin: 1rem 1.3rem 0 0;
-}
-
-#ArrayPlayground{
-    /* display: none; */
 }
